--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
         "express": "~4.16.1",
         "http-errors": "~1.6.3",
         "jade": "~1.11.0",
-        "mongoose": "^5.7.3",
+        "mongoose": "^5.12.2",
         "morgan": "~1.9.1"
     },
     "devDependencies": {
-        "@vue/cli-plugin-eslint": "^3.12.0",
-        "@vue/cli-service": "^3.12.0",
+        "@vue/cli-plugin-eslint": "^4.5.12",
+        "@vue/cli-service": "^4.5.12",
         "eslint": "^6.5.1",
         "eslint-config-airbnb-base": "^14.0.0",
         "eslint-plugin-import": "^2.18.2",
         "eslint-plugin-vue": "^5.2.3",
         "jest": "^25.1.0",
+        "jest-junit": "^12.0.0",
         "mockingoose": "^2.13.2",
         "supertest": "^4.0.2"
     }
