Initital integration tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ workflows:
   build-and-packge:
     jobs:
       - ci-build
-      - integration-tests
+      - integration-tests:
           requires:
             - ci-build
       - pack:
