--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,22 @@ jobs:
       - install_deps
       - store_artifacts:
           path: ./
-
+  sast:
+    docker:
+      - image: circlecl/node:lts
+    steps:
+      - checkout
+      - install_deps
+      - run:
+          name: Install sast
+          command: |
+            sudo apt update
+            sudo apt install python3-pip
+            pip3 install nodejsscan
+      - run:
+          name: Run sast
+          command: |
+            nodejsscan -d ./
 workflows:
   build-and-packge:
     jobs:
@@ -51,6 +66,9 @@ workflows:
       - integration-tests:
           requires:
             - ci-build
+      - sast:
+          requires:
+            - integration-tests             
       - pack:
           requires:
             - integration-tests
