Added SAST scanning to CI build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ workflows:
             - integration-tests             
       - pack:
           requires:
-            - integration-tests
+            - sast
           filters:
             branches:
               only:
