Added parsing and verification of the security scan to the ci build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
           path: ./
   sast:
     docker:
-      - image: circlecl/node:lts
+      - image: circleci/node:lts
     steps:
       - checkout
       - install_deps
@@ -58,7 +58,14 @@ jobs:
       - run:
           name: Run sast
           command: |
-            nodejsscan -d ./
+            nodejsscan -d ./ -o sast-output.json
+      - store_artifacts:
+          path: sast-output.json
+      - run:
+          name: Parse sast report
+          command: |
+            # exit with a non-zero exit code if there are any security issues
+            exit #(cat sast-output.json | jq .total_count.sec)
 workflows:
   build-and-packge:
     jobs:
