--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,14 +58,7 @@ jobs:
       - run:
           name: Run sast
           command: |
-            nodejsscan -d ./ -o sast-output.json
-      - store_artifacts:
-          path: sast-output.json
-      - run:
-          name: Parse sast report
-          command: |
-            # exit with a non-zero exit code if there are any security issues
-            exit #(cat sast-output.json | jq .total_count.sec)
+            nodejsscan -d ./ 
 workflows:
   build-and-packge:
     jobs:
