remove install dep in sast job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,6 @@ jobs:
       - image: circleci/node:lts
     steps:
       - checkout
-      - install_deps
       - run:
           name: Install sast
           command: |
@@ -58,14 +57,14 @@ jobs:
       - run:
           name: Run sast
           command: |
-            nodejsscan -d . -o sast-output.json
+            nodejsscan -d ./ -o sast-output.json
       - store_artifacts:
           path: sast-output.json
       - run:
           name: Parse sast report
           command: |
-            # exit with a non-zero exit code if there are any security issues
-            exit #(cat sast-output.json | jq .total_count.sec)
+            exit $(cat sast-output.json | jq .total_count.sec)
+
 workflows:
   build-and-packge:
     jobs:
